// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML writer should generate an HTML report file for merged requests 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <title>Report Friday, February 11, 2022 to Thursday, February 17, 2022</title>
    <link href="style.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
  </head>
  <body>
    <div>
      <h2>Merged events for period Friday, February 11, 2022 to Thursday, February 17, 2022</h2>
      <div class="container-sm text-left">
        <h3>Aggregated Statistics</h3>
        <div class="row">
          <div class="col-lg-10 text-secondary">
            <div class="row">
              <div class="col-sm-12 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title">0 months, 2 days, 3 hours, 20 minutes, 0 seconds</h5>
                    <p class="card-text"><em>Average time to merge</em></p>
                  </div>
                </div>
              </div>
            </div>
            <div class="row">
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-merged">3</h5>
                    <p class="card-text"><em># Merged</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-opened">0</h5>
                    <p class="card-text"><em># Opened</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-closed">0</h5>
                    <p class="card-text"><em># Closed</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-total">3</h5>
                    <p class="card-text"><em># Overall</em></p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="col-lg-2">
            <div class="row">
              <div>
                <canvas id="aggregated-statistics"></canvas>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="container-sm">
        <canvas id="merged-events"></canvas>
      </div>
    </div>
    <script type="text/javascript">
      const mergeRequestContext = document.getElementById('merged-events');
      const mergeRequestChartType = 'line'
      const mergeRequestChartDatasets = [{
          label: '# of Merge Requests merged',
          data: [1,2],
          borderWidth: 3,
          borderJoinStyle: "round",
          tension: 0.2
      }]
      const mergeRequestChartLabels = ["Week 7","Week 8"]
      
      const aggregatedMergeRequestContext = document.getElementById("aggregated-statistics")
      const aggregatedMergeRequestChartType = 'doughnut'
      const aggregatedMergeRequestChartLabels = ['Merged', 'Opened', 'Closed', 'All']
      const aggregatedMergeRequestChartDatasets =    [{
          label: 'Aggregated merge requests',
          data: [
              3,
              0,
              0,
              3
          ],
          hoverOffset: 4
      }]
      
      function renderChart(context, type, labels, datasets) {
          new Chart(context, {
              type: type,
              data: {
                  labels: labels,
                  datasets: datasets,
              },
              options: {}
          });
      }
      
      renderChart(mergeRequestContext, mergeRequestChartType, mergeRequestChartLabels, mergeRequestChartDatasets);
      renderChart(aggregatedMergeRequestContext, aggregatedMergeRequestChartType, aggregatedMergeRequestChartLabels, aggregatedMergeRequestChartDatasets);
    </script>
  </body>
</html>"
`;

exports[`HTML writer should generate an HTML report file for merged requests when some mr are not yet merged 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <title>Report Friday, February 11, 2022 to Thursday, February 17, 2022</title>
    <link href="style.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
  </head>
  <body>
    <div>
      <h2>Merged events for period Friday, February 11, 2022 to Thursday, February 17, 2022</h2>
      <div class="container-sm text-left">
        <h3>Aggregated Statistics</h3>
        <div class="row">
          <div class="col-lg-10 text-secondary">
            <div class="row">
              <div class="col-sm-12 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title">0 months, 3 days, 3 hours, 0 minutes, 0 seconds</h5>
                    <p class="card-text"><em>Average time to merge</em></p>
                  </div>
                </div>
              </div>
            </div>
            <div class="row">
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-merged">2</h5>
                    <p class="card-text"><em># Merged</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-opened">1</h5>
                    <p class="card-text"><em># Opened</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-closed">0</h5>
                    <p class="card-text"><em># Closed</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-total">3</h5>
                    <p class="card-text"><em># Overall</em></p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="col-lg-2">
            <div class="row">
              <div>
                <canvas id="aggregated-statistics"></canvas>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="container-sm">
        <canvas id="merged-events"></canvas>
      </div>
    </div>
    <script type="text/javascript">
      const mergeRequestContext = document.getElementById('merged-events');
      const mergeRequestChartType = 'line'
      const mergeRequestChartDatasets = [{
          label: '# of Merge Requests merged',
          data: [0,2],
          borderWidth: 3,
          borderJoinStyle: "round",
          tension: 0.2
      }]
      const mergeRequestChartLabels = ["Week 7","Week 8"]
      
      const aggregatedMergeRequestContext = document.getElementById("aggregated-statistics")
      const aggregatedMergeRequestChartType = 'doughnut'
      const aggregatedMergeRequestChartLabels = ['Merged', 'Opened', 'Closed', 'All']
      const aggregatedMergeRequestChartDatasets =    [{
          label: 'Aggregated merge requests',
          data: [
              2,
              1,
              0,
              3
          ],
          hoverOffset: 4
      }]
      
      function renderChart(context, type, labels, datasets) {
          new Chart(context, {
              type: type,
              data: {
                  labels: labels,
                  datasets: datasets,
              },
              options: {}
          });
      }
      
      renderChart(mergeRequestContext, mergeRequestChartType, mergeRequestChartLabels, mergeRequestChartDatasets);
      renderChart(aggregatedMergeRequestContext, aggregatedMergeRequestChartType, aggregatedMergeRequestChartLabels, aggregatedMergeRequestChartDatasets);
    </script>
  </body>
</html>"
`;

exports[`HTML writer should generate an HTML report file with months period 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <title>Report Saturday, January 1, 2022 to Wednesday, March 2, 2022</title>
    <link href="style.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
  </head>
  <body>
    <div>
      <h2>Merged events for period Saturday, January 1, 2022 to Wednesday, March 2, 2022</h2>
      <div class="container-sm text-left">
        <h3>Aggregated Statistics</h3>
        <div class="row">
          <div class="col-lg-10 text-secondary">
            <div class="row">
              <div class="col-sm-12 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title">0 months, 7 days, 18 hours, 0 minutes, 0 seconds</h5>
                    <p class="card-text"><em>Average time to merge</em></p>
                  </div>
                </div>
              </div>
            </div>
            <div class="row">
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-merged">3</h5>
                    <p class="card-text"><em># Merged</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-opened">0</h5>
                    <p class="card-text"><em># Opened</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-closed">0</h5>
                    <p class="card-text"><em># Closed</em></p>
                  </div>
                </div>
              </div>
              <div class="col-sm-3 mb-3 mb-sm-0">
                <div class="card mb-3">
                  <div class="card-body text-center">
                    <h5 class="card-title text-total">3</h5>
                    <p class="card-text"><em># Overall</em></p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="col-lg-2">
            <div class="row">
              <div>
                <canvas id="aggregated-statistics"></canvas>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="container-sm">
        <canvas id="merged-events"></canvas>
      </div>
    </div>
    <script type="text/javascript">
      const mergeRequestContext = document.getElementById('merged-events');
      const mergeRequestChartType = 'line'
      const mergeRequestChartDatasets = [{
          label: '# of Merge Requests merged',
          data: [1,2,0],
          borderWidth: 3,
          borderJoinStyle: "round",
          tension: 0.2
      }]
      const mergeRequestChartLabels = ["Jan","Feb","Mar"]
      
      const aggregatedMergeRequestContext = document.getElementById("aggregated-statistics")
      const aggregatedMergeRequestChartType = 'doughnut'
      const aggregatedMergeRequestChartLabels = ['Merged', 'Opened', 'Closed', 'All']
      const aggregatedMergeRequestChartDatasets =    [{
          label: 'Aggregated merge requests',
          data: [
              3,
              0,
              0,
              3
          ],
          hoverOffset: 4
      }]
      
      function renderChart(context, type, labels, datasets) {
          new Chart(context, {
              type: type,
              data: {
                  labels: labels,
                  datasets: datasets,
              },
              options: {}
          });
      }
      
      renderChart(mergeRequestContext, mergeRequestChartType, mergeRequestChartLabels, mergeRequestChartDatasets);
      renderChart(aggregatedMergeRequestContext, aggregatedMergeRequestChartType, aggregatedMergeRequestChartLabels, aggregatedMergeRequestChartDatasets);
    </script>
  </body>
</html>"
`;
